tests/e2e/complex_nested_expression2.error
Error: syntax error in story at line 1, column 24

1|    true and 1 + 1 == 2 or 3
                             ^

E0122: `int` can't be converted to `boolean`
